Main alignment fix, hero alignment fix, fixes z-index issue between hero and sidemenu

--- a/manon/components/sidemenu.scss
+++ b/manon/components/sidemenu.scss
@@ -58,7 +58,7 @@ main.sidemenu {
     background-position: theme.$sidemenu-nav-background-position;
     gap: theme.$sidemenu-nav-gap;
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     top: 0;
     left: 0;
     height: 100%;
